# django_nest

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.debug.yml  docker-compose.yml  makefile  pyproject.toml
DNest/: apps.py  forms.py  urls.py  utils.py  views.py
DNest/static/assets/css/: dnest.css  dnest.css.map  dnest.min.css  forms.css  utils.css
DNest/static/assets/js/: dnest.js  dnest.min.js  themeSettings.js  utils.js
DNest/static/assets/scss/: dnest.scss
DNest/templates/accounts/: change-done.html  lock.html  login.html  password-change.html  password-reset.html  register.html  reset-complete.html  reset-confirm.html  reset-done.html
DNest/templates/admin/: actions.html  change_form.html  change_list.html  change_list_results.html  delete_confirmation.html  delete_selected_confirmation.html  index.html  invalid_setup.html  login.html  object_history.html  pagination.html  search_form.html
DNest/templates/includes/: fixed-plugin.html  footer.html  head.html  menu-list.html  model_register.html  nav-minimize.html  navigation-auth.html  navigation.html  scripts.html  sidebar.html
DNest/templates/layouts/: base-auth.html  base.html
DNest/templates/pages/: calendar.html  charts.html  dashboard.html  template.html  widgets.html
DNest/templates/registration/: logged_out.html  password_change_done.html  password_change_form.html
DNest/templates/utils/: password-reset-email.html
DNest/templatetags/: DNest.py  replace_value.py
config/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: start-local.sh
(+23 files in other folders)
