[tool.poetry]
name = "django-nest"
version = "0.1.0"
description = "\"django nest project\""
authors = ["pratadaniel94 <danielprata@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django4django = "^0.0.2"
django = "^5.0.2"
fontawesomefree = "^6.5.1"
psycopg2-binary = "^2.9.9"
django-cors-headers = "^4.3.1"
whitenoise = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
